 % Development flag or note, such as branching.


Pretty URLs 1.0                                                  ???
================================================================================
 ! Base: The relativising code needed some fixes. Sadly <base> can't be used. (PrettyUrls-Filters.php, QueryString.php)
 % Base/reverter: Installs on SMF 2.0 RC2. Thanks Yağız!

Pretty URLs 1.0RC                                                  19 June, 2009
================================================================================
 % Base/reverter: Installs on SMF 2.0 RC1.
 + Base: Prettify URLs in emails. (Subs-Post.php)
 ! Base: Don't let fix_possible_url() change any URLs. (News.php)
 ! Base: The previous changes needed a little more work. (News.php, PrettyUrls-Filters.php, Subs-Post.php)
 ! Boards/Topics: Fix SMF bug #3418 (QueryString.php)
 ! Boards/Topics: Always unset $_GET['pretty'] in SMF2. Never before. (QueryString.php)
 ! Base: Quotes are back finally... (PrettyUrls-Filters.php)
 ! Base/extras: Change pattern delimiters so that ~username URLs will work. (Many files)
 + Base: Don't overwrite existing .htaccess files. (Subs-PrettyUrls.php)
 ! Base: Always display something for the admin menu. (Admin.php, Subs.php)
 + Base: Installation readme and CONTRIBUTORS file! :)
 + Base: Absolutise relative URLs. (PrettyUrls-Filters.php, QueryString.php)
 ! Base: Don't cache sc or $context['session_var']. (PrettyUrls-Filters.php)
 ! Base: If the .htaccess file can't be written to, then don't enable rewriting. (install.php, Subs-PrettyUrls.php)
 + Base: Use the chrome templates when installing. (install.php, PrettyUrls.php, PrettyUrls.template.php, etc)
 ! Base: Changed the hotmail fix so that it now autolinks all URLs. (Subs-Post.php)
 + Base: Automatically detect whether RewriteBase will be needed. (Subs-PrettyUrls.php)
 + Base: Added an admin page for testing whether rewriting works. (PrettyUrls.php, PrettyUrls.template.php, etc)
